Update makeWin.bat